new paco effects

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="background">
             <div class="content">
                 <h1>MEGUMI KATAOKA</h1>
-                <p>Art is just a simplistic blablabla chinchin chinchin</p>
+                <p>Art is just a simplistic blablabla cchinchin chinchon hinchin chinchin</p>
             </div>
         </div>
 
@@ -43,22 +43,98 @@
             <img src="img/border.png" alt="" class="fancyBorder">
         </div>
 
-        <div class="products_display">
-
-
+        <div id="products_display">
             <div class="product">
                 <a href="#" class="in8x10">
-                    <div>
-                        <h3>Porche</h3>
-                        <p>8x10in</p>
-                        <p class="exhi">Exhibition Only</p>
+                    <div class="centerDiv">
+                        <div>
+                            <h3>Porche</h3>
+                            <p>8x10in</p>
+                            <p class="exhi">Exhibition Only</p>
+                        </div>
                     </div>
                     <img src="img/porche.jpeg" alt="">
+                </a>
+            </div>
+            <div class="product">
+                <a href="#" class="in8x10">
+                    <div class="centerDiv">
+                        <div>
+                            <h3>Amanohashidate</h3>
+                            <p>8x10in</p>
+                            <p class="exhi">Exhibition Only</p>
+                        </div>
+                    </div>
+                    <img src="img/amanohashidate.jpeg" alt="">
+                </a>
+            </div>
+            <div class="product">
+                <a href="#" class="in7x9">
+                    <div class="centerDiv">
+                        <div>
+                            <h3>First paint</h3>
+                            <p>8.3x6in</p>
+                            <p class="exhi">Exhibition Only</p>
+                        </div>
+                    </div>
+                    <img src="img/firstPaint.jpeg" alt="">
+                </a>
+            </div>
+            <div class="product">
+                <a href="#" class="in8x10">
+                    <div class="centerDiv">
+                        <div>
+                            <h3>Cat</h3>
+                            <p>8x10in</p>
+                            <p class="exhi">Exhibition Only</p>
+                        </div>
+                    </div>
+                    <img src="img/cat.jpeg" alt="">
+                </a>
+            </div>
+            <div class="product">
+                <a href="#" class="in8x10">
+                    <div class="centerDiv">
+                        <div>
+                            <h3>Relaxing</h3>
+                            <p>8x10in</p>
+                            <p class="exhi">Exhibition Only</p>
+                        </div>
+                    </div>
+                    <img src="img/relaxing.jpeg" alt="">
+                </a>
+            </div>
+            <div class="product">
+                <a href="#" class="in7x9">
+                    <div class="centerDiv">
+                        <div>
+                            <h3>Floating</h3>
+                            <p>7x5.5in</p>
+                            <p class="exhi">Exhibition Only</p>
+                        </div>
+                    </div>
+                    <img src="img/floating.jpeg" alt="">
+                </a>
+            </div>
+            <div class="product">
+                <a href="#" class="in4x4">
+                    <div class="centerDiv">
+                        <div>
+                            <h3>Pirate</h3>
+                            <p>4x4in</p>
+                            <p class="exhi">Exhibition Only</p>
+                        </div>
+                    </div>
+                    <img src="img/pirate.jpeg" alt="">
                 </a>
             </div>
 
 
 
+
+        </div>
+
+        <!-- <div class="products_display">
             <div class="product">
                 <a href="#" class="in8x10">
                     <img src="img/porche.jpeg" alt="">
@@ -115,7 +191,7 @@
                 <p>7x5.5in</p>
                 <p class="exhi">Exhibition Only</p>
             </div>
-        </div>
+        </div> -->
 
     </section>
 
