--- a/index.html
+++ b/index.html
@@ -2,203 +2,183 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- GOOGLE_FONTS: 2-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@400;700&family=Spartan:wght@300;400;500&display=swap"
-        rel="stylesheet">
-    <!-- CSS_STYLE_SHEET -->
-    <link rel="stylesheet" href="style.css">
-    <!-- OTHER -->
-    <title>Megumi Kataoka</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Megumi Kataoka</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- BOOTSTRAP -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
 </head>
 
 <body>
+  <main>
     <nav>
-        <img src="img/logo.jpeg" alt="" class="logo">
-        <ul>
-            <li><a href="">ARTWORKS</a></li>
-            <li><a href="">CONTACT</a></li>
-            <li><a href=""><img src="https://img.icons8.com/ios/50/000000/bag-front-view.png" /></a></li>
-        </ul>
+      <img src="img/logo.jpeg" alt="" class="nav-logo">
+      <ul class="links">
+        <li><a href="#artworks">ARTWORKS</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
     </nav>
 
     <header>
-        <div class="background">
-            <div class="content">
-                <h1>MEGUMI KATAOKA</h1>
-                <p>Art is just a simplistic blablabla cchinchin chinchon hinchin chinchin</p>
-            </div>
+      <div class="header-bg">
+        <div class="header-content">
+          <h1>MEGUMI KATAOKA</h1>
+          <p>アートとは幸せな瞬間を永遠に残すことです。<span>EN: </span>Art my way to keep my happy memories forever.</p>
         </div>
-
+      </div>
     </header>
 
-    <section class="products">
-        <div id="artworks">
-            <h2>ARTWORKS</h2>
-            <img src="img/border.png" alt="" class="fancyBorder">
-        </div>
+    <section id="artworks">
+      <div class="title">
+        <h2>ARTWORKS</h2>
+        <img src="img/border.png" alt="" class="fancyBorder">
+      </div>
 
-        <div id="products_display">
-            <div class="product">
-                <a href="#" class="in8x10">
-                    <div class="centerDiv">
-                        <div>
-                            <h3>Porche</h3>
-                            <p>8x10in</p>
-                            <p class="exhi">Exhibition Only</p>
-                        </div>
-                    </div>
-                    <img src="img/porche.jpeg" alt="">
-                </a>
-            </div>
-            <div class="product">
-                <a href="#" class="in8x10">
-                    <div class="centerDiv">
-                        <div>
-                            <h3>Amanohashidate</h3>
-                            <p>8x10in</p>
-                            <p class="exhi">Exhibition Only</p>
-                        </div>
-                    </div>
-                    <img src="img/amanohashidate.jpeg" alt="">
-                </a>
-            </div>
-            <div class="product">
-                <a href="#" class="in7x9">
-                    <div class="centerDiv">
-                        <div>
-                            <h3>First paint</h3>
-                            <p>8.3x6in</p>
-                            <p class="exhi">Exhibition Only</p>
-                        </div>
-                    </div>
-                    <img src="img/firstPaint.jpeg" alt="">
-                </a>
-            </div>
-            <div class="product">
-                <a href="#" class="in8x10">
-                    <div class="centerDiv">
-                        <div>
-                            <h3>Cat</h3>
-                            <p>8x10in</p>
-                            <p class="exhi">Exhibition Only</p>
-                        </div>
-                    </div>
-                    <img src="img/cat.jpeg" alt="">
-                </a>
-            </div>
-            <div class="product">
-                <a href="#" class="in8x10">
-                    <div class="centerDiv">
-                        <div>
-                            <h3>Relaxing</h3>
-                            <p>8x10in</p>
-                            <p class="exhi">Exhibition Only</p>
-                        </div>
-                    </div>
-                    <img src="img/relaxing.jpeg" alt="">
-                </a>
-            </div>
-            <div class="product">
-                <a href="#" class="in7x9">
-                    <div class="centerDiv">
-                        <div>
-                            <h3>Floating</h3>
-                            <p>7x5.5in</p>
-                            <p class="exhi">Exhibition Only</p>
-                        </div>
-                    </div>
-                    <img src="img/floating.jpeg" alt="">
-                </a>
-            </div>
-            <div class="product">
-                <a href="#" class="in4x4">
-                    <div class="centerDiv">
-                        <div>
-                            <h3>Pirate</h3>
-                            <p>4x4in</p>
-                            <p class="exhi">Exhibition Only</p>
-                        </div>
-                    </div>
-                    <img src="img/pirate.jpeg" alt="">
-                </a>
-            </div>
+      <div class="products_display">
 
-
-
-
-        </div>
-
-        <!-- <div class="products_display">
-            <div class="product">
-                <a href="#" class="in8x10">
-                    <img src="img/porche.jpeg" alt="">
-                </a>
+        <div class="column">
+          <div class="paint">
+            <img src="img/porche.jpeg" alt="">
+            <div class="paint-info">
+              <div>
                 <h3>Porche</h3>
                 <p>8x10in</p>
-                <p class="exhi">Exhibition Only</p>
+                <!-- <p class="red-info">Exhibition Only</p> -->
+              </div>
             </div>
-            <div class="product">
-                <a href="#" class="in8x10">
-                    <img src="img/amanohashidate.jpeg" alt="">
-                </a>
-                <h3>Amanohashidate</h3>
-                <p>8x10in</p>
-                <p class="exhi">Exhibition Only</p>
-            </div>
-            <div class="product">
-                <a href="#" class="in7x9">
-                    <img src="img/firstPaint.jpeg" alt="">
-                </a>
-                <h3>First paint</h3>
-                <p>8.3x6in</p>
-                <p class="exhi">Exhibition Only</p>
-            </div>
-            <div class="product">
-                <a href="#" class="in8x10">
-                    <img src="img/cat.jpeg" alt="">
-                </a>
-                <h3>Cat</h3>
-                <p>8x10in</p>
-                <p class="exhi">Exhibition Only</p>
-            </div>
-            <div class="product">
-                <a href="#" class="in8x10">
-                    <img src="img/relaxing.jpeg" alt="">
-                </a>
-                <h3>Relaxing</h3>
-                <p>8x10in</p>
-                <p class="exhi">Exhibition Only</p>
-            </div>
-            <div class="product">
-                <a href="#" class="in4x4">
-                    <img src="img/pirate.jpeg" alt="">
-                </a>
+          </div>
+          <div class="paint">
+            <img src="img/pirate.jpeg" alt="">
+            <div class="paint-info">
+              <div>
                 <h3>Pirate</h3>
                 <p>4x4in</p>
-                <p class="exhi">Exhibition Only</p>
+              </div>
             </div>
-            <div class="product">
-                <a href="#" class="in7x9">
-                    <img src="img/floating.jpeg" alt="">
-                </a>
+          </div>
+          <div class="paint">
+            <img src="img/amanohashidate.jpeg" alt="">
+            <div class="paint-info">
+              <div>
+                <h3>Amanohashidate</h3>
+                <p>8x10in</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="paint">
+            <img src="img/firstPaint.jpeg" alt="">
+            <div class="paint-info">
+              <div>
+                <h3>Fist paint</h3>
+                <p>8.3x6in</p>
+              </div>
+            </div>
+          </div>
+          <div class="paint">
+            <img src="img/Zamami.jpeg" alt="">
+            <div class="paint-info">
+              <div>
+                <h3>Zamami</h3>
+                <p>4x4in</p>
+              </div>
+            </div>
+          </div>
+          <div class="paint">
+            <img src="img/cat.jpeg" alt="">
+            <div class="paint-info">
+              <div>
+                <h3>Cat</h3>
+                <p>8x10in</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="paint">
+            <img src="img/relaxing.jpeg" alt="">
+            <div class="paint-info">
+              <div>
+                <h3>Relaxing</h3>
+                <p>8x10in</p>
+              </div>
+            </div>
+          </div>
+          <div class="paint">
+            <img src="img/floating.jpeg" alt="">
+            <div class="paint-info">
+              <div>
                 <h3>Floating</h3>
                 <p>7x5.5in</p>
-                <p class="exhi">Exhibition Only</p>
+              </div>
             </div>
-        </div> -->
-
+          </div>
+          <div class="paint">
+            <img src="img/floating.jpeg" alt="">
+            <div class="paint-info">
+              <div>
+                <h3>Floating</h3>
+                <p>7x5.5in</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
+
+    <section id="contact">
+      <div class="title">
+        <h2>CONTACT</h2>
+        <img src="img/border.png" alt="" class="fancyBorder">
+      </div>
+
+      <form action="" method="get">
+        <div class="field">
+          <label for="firstname">First name:</label>
+          <input id="firstname" type="text" placeholder="Yoshitaka" size="24" required>
+        </div>
+        <div class="field">
+          <label for="lastname">Last name:</label>
+          <input id="lastname" type="text" placeholder="Nomura" size="24" required>
+        </div>
+        <div class="field">
+          <label for="email">Email:</label>
+          <input id="email" type="text" placeholder="nyoshikata@email.com" size="24" required>
+        </div>
+        <div class="field">
+          <label for="company">Organization:</label>
+          <input id="company" type="text" placeholder="LUVRE" size="24">
+        </div>
+        <div class="field">
+          <label for="message">Your message:</label>
+        </div>
+        <textarea id="message" rows="8" required></textarea>
+        <button class="btn-form">Submit</button>
+      </form>
+    </section>
+
+
+    <footer>
+      <p class="copyright">Megumi Kataoka © 2022</p>
+      <p class="madeby">Site designed by:</p>
+      <div class="tirsop">
+        <a href="www.tirsop.com" target="_blank">
+          <img class="avatar" src="img/Tirso Pascual.jpeg" alt="Tirso Pascual">
+        </a>
+      </div>
+    </footer>
+  </main>
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script> -->
 </body>
 
 </html>
-
-<!-- 4x4in = 3.9x3.9in
-7x5.5 = 7.1x5.5in
-8.3x6in = 8.3x5.9in -->
