--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <nav>
-      <img src="img/logo.jpeg" alt="" class="nav-logo">
+      <img src="img/kanji.png" alt="" class="nav-logo">
       <ul class="links">
         <li><a href="#artworks">ARTWORKS</a></li>
         <li><a href="#contact">CONTACT</a></li>
@@ -142,19 +142,19 @@
       <form action="" method="get">
         <div class="field">
           <label for="firstname">First name:</label>
-          <input id="firstname" type="text" placeholder="Yoshitaka" size="24" required>
+          <input id="firstname" type="text" placeholder=" Yoshitaka" size="24" required>
         </div>
         <div class="field">
           <label for="lastname">Last name:</label>
-          <input id="lastname" type="text" placeholder="Nomura" size="24" required>
+          <input id="lastname" type="text" placeholder=" Nomura" size="24" required>
         </div>
         <div class="field">
           <label for="email">Email:</label>
-          <input id="email" type="text" placeholder="nyoshikata@email.com" size="24" required>
+          <input id="email" type="text" placeholder=" nyoshikata@email.com" size="24" required>
         </div>
         <div class="field">
           <label for="company">Organization:</label>
-          <input id="company" type="text" placeholder="LUVRE" size="24">
+          <input id="company" type="text" placeholder=" LUVRE" size="24">
         </div>
         <div class="field">
           <label for="message">Your message:</label>
