added the last paintint

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
           </div>
           <div class="paint">
-            <img src="img/floating.jpeg" alt="">
+            <img src="img/isshiki.jpeg" alt="">
             <div class="paint-info">
               <div>
                 <h3>Floating</h3>
