lower the resolution of the images so it loads faster

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="column">
           <div class="paint">
-            <img src="img/porche.jpeg" alt="">
+            <img src="img/porche-small.jpeg" alt="">
             <div class="paint-info">
               <div>
                 <h3>Porche</h3>
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="paint">
-            <img src="img/pirate.jpeg" alt="">
+            <img src="img/pirate-small.jpeg" alt="">
             <div class="paint-info">
               <div>
                 <h3>Pirate</h3>
@@ -60,40 +60,10 @@
             </div>
           </div>
           <div class="paint">
-            <img src="img/amanohashidate.jpeg" alt="">
+            <img src="img/amanohashidate-small.jpeg" alt="">
             <div class="paint-info">
               <div>
                 <h3>Amanohashidate</h3>
-                <p>8x10in</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="column">
-          <div class="paint">
-            <img src="img/firstPaint.jpeg" alt="">
-            <div class="paint-info">
-              <div>
-                <h3>Fist paint</h3>
-                <p>8.3x6in</p>
-              </div>
-            </div>
-          </div>
-          <div class="paint">
-            <img src="img/Zamami.jpeg" alt="">
-            <div class="paint-info">
-              <div>
-                <h3>Zamami</h3>
-                <p>4x4in</p>
-              </div>
-            </div>
-          </div>
-          <div class="paint">
-            <img src="img/cat.jpeg" alt="">
-            <div class="paint-info">
-              <div>
-                <h3>Cat</h3>
                 <p>8x10in</p>
               </div>
             </div>
@@ -111,7 +81,7 @@
             </div>
           </div>
           <div class="paint">
-            <img src="img/floating.jpeg" alt="">
+            <img src="img/floating-small.jpeg" alt="">
             <div class="paint-info">
               <div>
                 <h3>Floating</h3>
@@ -120,7 +90,7 @@
             </div>
           </div>
           <div class="paint">
-            <img src="img/isshiki.jpeg" alt="">
+            <img src="img/isshiki-small.jpeg" alt="">
             <div class="paint-info">
               <div>
                 <h3>Floating</h3>
@@ -129,6 +99,37 @@
             </div>
           </div>
         </div>
+
+        <div class="column">
+          <div class="paint">
+            <img src="img/firstPaint-small.jpeg" alt="">
+            <div class="paint-info">
+              <div>
+                <h3>Fist paint</h3>
+                <p>8.3x6in</p>
+              </div>
+            </div>
+          </div>
+          <div class="paint">
+            <img src="img/Zamami.jpeg" alt="">
+            <div class="paint-info">
+              <div>
+                <h3>Zamami</h3>
+                <p>4x4in</p>
+              </div>
+            </div>
+          </div>
+          <div class="paint">
+            <img src="img/cat-small.jpeg" alt="">
+            <div class="paint-info">
+              <div>
+                <h3>Cat</h3>
+                <p>8x10in</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
 
